--- a/package.json
+++ b/package.json
@@ -10,7 +10,11 @@
     "e2e": "ng e2e",
     "start-de": "ng serve --prod",
     "start-en": "ng serve --configuration=production-en",
-    "extract-i18n": "ng xi18n --i18nFormat=xmb"
+    "extract-i18n": "ng xi18n --i18nFormat=xmb",
+    "compile:server": "webpack --config webpack.server.config.js --progress --colors",
+    "serve:ssr": "node dist/server",
+    "build:ssr": "npm run build:client-and-server-bundles && npm run compile:server",
+    "build:client-and-server-bundles": "ng build --prod && ng run BookMonkey:server:production"
   },
   "private": true,
   "dependencies": {
@@ -19,15 +23,20 @@
     "@angular/compiler": "~7.2.0",
     "@angular/core": "~7.2.0",
     "@angular/forms": "~7.2.0",
+    "@angular/http": "~7.2.0",
     "@angular/platform-browser": "~7.2.0",
     "@angular/platform-browser-dynamic": "~7.2.0",
+    "@angular/platform-server": "~7.2.0",
     "@angular/router": "~7.2.0",
-    "core-js": "^2.5.4",
-    "rxjs": "~6.3.3",
-    "tslib": "^1.9.0",
-    "zone.js": "~0.8.26",
+    "@nguniversal/express-engine": "^7.1.1",
+    "@nguniversal/module-map-ngfactory-loader": "0.0.0",
     "angular-date-value-accessor": "~0.0.2",
-    "semantic-ui-css": "~2.4.1"
+    "core-js": "^2.5.4",
+    "express": "^4.15.2",
+    "rxjs": "~6.3.3",
+    "semantic-ui-css": "~2.4.1",
+    "tslib": "^1.9.0",
+    "zone.js": "~0.8.26"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.13.0",
@@ -46,8 +55,10 @@
     "karma-jasmine": "~1.1.2",
     "karma-jasmine-html-reporter": "^0.2.2",
     "protractor": "~5.4.0",
+    "ts-loader": "^5.2.0",
     "ts-node": "~7.0.0",
     "tslint": "~5.11.0",
-    "typescript": "~3.2.2"
+    "typescript": "~3.2.2",
+    "webpack-cli": "^3.1.0"
   }
 }
