--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "angular-date-value-accessor": "~0.0.2",
     "core-js": "^2.5.4",
     "express": "^4.15.2",
+    "mkdirp": "^0.5.1",
     "rxjs": "~6.3.3",
     "semantic-ui-css": "~2.4.1",
     "tslib": "^1.9.0",
